添加leanCloud云数据库，添加登录逻辑，压缩新的工程文件，添加图片等，有问题请及时沟通

--- a/agrBankWallet/agrBankWallet/Class/UserCenter/controller/KGLoginVC.xib
+++ b/agrBankWallet/agrBankWallet/Class/UserCenter/controller/KGLoginVC.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KGLoginVC">
             <connections>
                 <outlet property="userName" destination="hk2-wG-Xx9" id="n1j-cd-SWc"/>
+                <outlet property="userPassword" destination="Ysd-qy-gmV" id="1o6-Zc-q3C"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,18 +20,15 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="74Y-2c-X7I">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="132"/>
                 </imageView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hk2-wG-Xx9">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10000000001" placeholder="手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hk2-wG-Xx9">
                     <rect key="frame" x="33" y="151" width="255" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="登录密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ysd-qy-gmV">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123456" placeholder="登录密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ysd-qy-gmV">
                     <rect key="frame" x="33" y="186" width="255" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <action selector="handleRegisterBtnAction:" destination="-1" eventType="touchUpInside" id="DLu-Zb-Tr4"/>
-                    </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0rI-dr-gjs">
                     <rect key="frame" x="33" y="252" width="255" height="23"/>
