--- a/agrBankWallet/agrBankWallet/Class/Activity/controller/ActivityStoryboard.storyboard
+++ b/agrBankWallet/agrBankWallet/Class/Activity/controller/ActivityStoryboard.storyboard
@@ -31,7 +31,7 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9VQ-Ih-f1W">
                                                     <rect key="frame" x="15" y="10" width="58" height="58"/>
-                                                    <color key="backgroundColor" red="1" green="0.4313725531" blue="0.37254902719999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="活动名称" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2i4-s0-nfH">
                                                     <rect key="frame" x="85" y="10" width="220" height="20"/>
@@ -51,7 +51,7 @@
                                             <outlet property="contentlabel" destination="HMy-iu-Mfv" id="3Zi-Lg-LMu"/>
                                             <outlet property="nameLabel" destination="2i4-s0-nfH" id="HhE-ZN-uMU"/>
                                             <outlet property="picture" destination="9VQ-Ih-f1W" id="ovl-th-bmj"/>
-                                            <segue destination="iOQ-gJ-Itz" kind="push" identifier="ActivityDetailPush" id="a4t-YJ-iEa"/>
+                                            <segue destination="iOQ-gJ-Itz" kind="push" id="Fb7-kG-y26"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -80,7 +80,7 @@
         <!--Activity DetailVC-->
         <scene sceneID="W0y-pr-ZEO">
             <objects>
-                <viewController id="iOQ-gJ-Itz" customClass="KGActivityDetailVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ActivityDetailVC" id="iOQ-gJ-Itz" customClass="KGActivityDetailVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sf0-za-iSL"/>
                         <viewControllerLayoutGuide type="bottom" id="Upj-lT-WTD"/>
@@ -88,7 +88,57 @@
                     <view key="view" contentMode="scaleToFill" id="vzT-dq-KCc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="QRg-Dz-gs1">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="dNt-o6-6DJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="特惠新鲜抢" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CYt-be-eMS">
+                                            <rect key="frame" x="10" y="10" width="280" height="21"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" red="0.21176470816135406" green="0.21176470816135406" blue="0.21176470816135406" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="江苏农行" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfU-dl-f7K">
+                                            <rect key="frame" x="100" y="35" width="210" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.57647061347961426" green="0.57647061347961426" blue="0.57647061347961426" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2014-09-28" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N3F-bZ-59s">
+                                            <rect key="frame" x="10" y="35" width="80" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.57647061347961426" green="0.57647061347961426" blue="0.57647061347961426" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextCell" rowHeight="60" id="ai4-SS-af8" userLabel="TextCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ai4-SS-af8" id="duo-W4-euZ">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="iOQ-gJ-Itz" id="pBv-1J-86Z"/>
+                                    <outlet property="delegate" destination="iOQ-gJ-Itz" id="b28-5u-FVD"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99607843139999996" green="0.62352941179999999" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="QRg-Dz-gs1" firstAttribute="top" secondItem="sf0-za-iSL" secondAttribute="bottom" id="8aq-Yk-zxq"/>
+                            <constraint firstAttribute="trailing" secondItem="QRg-Dz-gs1" secondAttribute="trailing" id="CQd-dJ-v36"/>
+                            <constraint firstItem="Upj-lT-WTD" firstAttribute="top" secondItem="QRg-Dz-gs1" secondAttribute="bottom" id="TWH-OG-tOt"/>
+                            <constraint firstItem="QRg-Dz-gs1" firstAttribute="leading" secondItem="vzT-dq-KCc" secondAttribute="leading" id="r4a-Y9-TUN"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="d67-V8-BY7"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
