--- a/agrBankWallet/agrBankWallet/Class/Form/controller/AppointmentStoryboard.storyboard
+++ b/agrBankWallet/agrBankWallet/Class/Form/controller/AppointmentStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GHk-jN-quU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GHk-jN-quU">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--FormVC-->
@@ -52,6 +52,9 @@
                                                             <integer key="value" value="1"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="btnAction:" destination="XOP-20-gfk" eventType="touchUpInside" id="iBh-Zh-CzN"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -83,12 +86,32 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <segue destination="k3A-m1-zM4" kind="push" identifier="PushSubmitApplyVC" id="aIE-BE-n9w"/>
+                        <segue destination="Utn-Ic-bAZ" kind="push" identifier="PushSubmitApplyVC" id="Dt7-c3-YZF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iDg-N8-49D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="346" y="-127"/>
+            <point key="canvasLocation" x="407" y="-186"/>
+        </scene>
+        <!--SubmitVC-->
+        <scene sceneID="83E-NP-Xo0">
+            <objects>
+                <viewController id="Utn-Ic-bAZ" customClass="KGSubmitVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7c7-ka-mtu"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gom-Z7-K3J"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="i0S-c9-82i">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="uUT-Gz-hXl"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f2L-7T-h2p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="882" y="-672"/>
         </scene>
         <!--Submit ApplyVC-->
         <scene sceneID="fH1-wh-Uy2">
@@ -289,7 +312,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LkX-YN-hTp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="756" y="-127"/>
+            <point key="canvasLocation" x="953" y="-100"/>
         </scene>
         <!--My AppointmentVC-->
         <scene sceneID="eZ2-Hc-CfN">
