及时更新有新文件

--- a/agrBankWallet/agrBankWallet/Class/UserCenter/controller/KGRateExchangeVC.xib
+++ b/agrBankWallet/agrBankWallet/Class/UserCenter/controller/KGRateExchangeVC.xib
@@ -55,6 +55,9 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="uAc-gU-hWD"/>
+                            </connections>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pb0-pz-BH5">
                             <rect key="frame" x="104" y="100" width="204" height="43"/>
@@ -62,24 +65,28 @@
                                 <constraint firstAttribute="height" constant="43" id="uYb-Wy-MrT"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KEY-i7-9Ix">
                             <rect key="frame" x="0.0" y="80" width="320" height="1"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oLK-Za-GdZ">
+                            <rect key="frame" x="0.0" y="157" width="320" height="1"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CqI-mG-Edr">
                             <rect key="frame" x="17" y="159" width="303" height="33"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="33" id="w3V-Lx-CFB"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.72036919980000003" green="1" blue="0.1127936917" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="8Ip-8Z-Rxq" secondAttribute="trailing" constant="15" id="1Ea-x1-Okz"/>
                         <constraint firstAttribute="trailing" secondItem="pb0-pz-BH5" secondAttribute="trailing" constant="12" id="2Af-K0-JKc"/>
@@ -97,7 +104,7 @@
                         <constraint firstItem="FmN-dC-Bwu" firstAttribute="leading" secondItem="pgL-pD-Yw7" secondAttribute="leading" constant="17" id="kd4-L3-iSE"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2uL-d9-Wri">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2uL-d9-Wri">
                     <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                     <subviews>
                         <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFh-gI-rJB">
@@ -174,7 +181,7 @@
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="358" y="133"/>
+            <point key="canvasLocation" x="137" y="136"/>
         </view>
     </objects>
 </document>
